--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,15 +6,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: azure/docker-login@v1
+      - uses: docker/login-action@v1
         with:
-          login-server: https://index.docker.io/v1/
           username: ${{ secrets.DOCKERIO_USERNAME }}
           password: ${{ secrets.DOCKERIO_PASSWORD }}
-      - name: Setup builder
-        run: |
-          docker buildx create --use
-          docker buildx inspect --bootstrap
+      -
+        uses: docker/setup-buildx-action@v1
+        name: Setup buildp
       - name: Checkout
         uses: actions/checkout@v2
       - name: Deployment info
