--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ on:
         default: 'true'
 
 env:
-  REPO_SLUG: tonistiigi/binfmt
+  REPO_SLUG: vicamo/binfmt
   CACHE_GHA_SCOPE_CROSS: binfmt-cross
 
 jobs:
