test(webpack): pin versions for webpack and webpack-cli
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/test/dockerfiles/webpack/Dockerfile
+++ b/test/dockerfiles/webpack/Dockerfile
@@ -2,7 +2,7 @@ FROM node:12-slim
 
 WORKDIR /js
 
-RUN npm install -g webpack webpack-cli
+RUN npm install -g webpack@4.43.0 webpack-cli@3.3.12
 
 COPY ./package.json /js
 COPY ./package-lock.json /js
