test: npm version
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,9 @@ jobs:
           - target: mainline
             dockerfile: libc-bin
             platform: linux/arm64
+          - target: mainline
+            dockerfile: npm-version
+            platform: linux/arm64
           - target: desktop
             dockerfile: tini
             platform: linux/arm64
