test: npm version
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,7 +149,7 @@ jobs:
           - linux/arm/v7
         include:
           - target: mainline
-            dockerfile: ejabberd
+            dockerfile: npm-version
             platform: linux/arm64
           - target: desktop
             dockerfile: tini
