testing buildkit new cache interface
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -300,6 +300,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           buildkitd-config: .github/buildkit.toml
+          buildkitd-flags: --debug
+          driver-opts: image=crazymax/buildkit:cachev2
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
