ci: use local source for bake
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,7 @@ jobs:
         if: matrix.target == 'buildkit'
         uses: docker/bake-action@v6
         with:
+          source: .
           targets: buildkit-test
           set: |
             *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
@@ -105,6 +106,7 @@ jobs:
         if: matrix.target == 'mainline'
         uses: docker/bake-action@v6
         with:
+          source: .
           targets: mainline
           load: true
           set: |
@@ -174,6 +176,7 @@ jobs:
         name: Load for testing
         uses: docker/bake-action@v6
         with:
+          source: .
           targets: ${{ matrix.target }}
           load: true
           set: |
@@ -315,6 +318,7 @@ jobs:
         id: bake
         uses: docker/bake-action@v6
         with:
+          source: .
           files: |
             ./docker-bake.hcl
             ${{ steps.meta.outputs.bake-file }}
